<resources>
    
    <string name="app_name">Don"'"t be late</string>
    <string name="podaj_dane">Give me data :)</string>
    <string name="podaj_adres">Give me the destination address.</string>
    <string name="adres">Street,City,Country</string>
    <string name="planowana_godzina">At what time?</string>
    <string name="kiedyDwaCztery">e.g 21.45</string>
    <string name="kiedy">e.g 6.09</string>
    <string name="jak_szybko_musze_isc">How fast should I go?</string>

    <string name="oczekiwanie">Wait a moment :) I"'"m in the process calculate ..\n(If you wait so much Go out!Your GPS coverage status is low</string>
    <string name="zla_godzina">Wrong time</string>

    <string name="display_up">In a straight line: %1$.2f %6$s  \n Current velocity %2$.2f %6$s/h\n You should go min. %3$.2f %6$s/h all the time\n  With current velocity You"'"ll be in %4$.1f minutes \n With your medium velocity You"'"ll be in %5$.1f minutes</string>
    <string name="display_down">If you go the fastest route according Google your destination is %1$.2f %4$s \n You should go min. %2$.2f %4$s/h all the time\n With current velocity You"'"ll be in %3$.1f minutes</string>

    <string name="display_upUS">In a straight line: %1$.0f yards or %2$.0f ft  \n Current velocity %3$.4f miles/h \n You should go min. %4$.4f miles/h \n  With current velocity You"'"ll be in %5$.1f minutes \n With your medium velocity You"'"ll be in %6$.1f minutes</string>
    <string name="display_downUS">If you go the fastest route according Google your destination is %1$.0f yards or %2$.0f ft \n You should go min. %3$.4f miles\n With current velocity You"'"ll be in %4$.1f minutes</string>

    <string name="za_wolno">You should go faster</string>
    <string name="dobre_tempo">Your velosity is good ;)</string>

    <string name="_24h" translatable="false">24h/</string>
    <string name="am" translatable="false">AM/</string>
    <string name="pm" translatable="false">PM</string>
    <string name="przerwa" translatable="false">-------------------------------------</string>
    <string name="km" translatable="false">km</string>
    <string name="miles_ft" translatable="false">Yard</string>

    <string name="google_warunek">If users don"'"t increase free limit Google per day*(if you enable internet) I calculate fastest route according Google..</string>
    <string name="google_gwiazdka">*Without my identity verification Google let me default 1 request per day</string>

    <string name="podaj_godzine">What time?</string>
    <string name="adres_niepoprawny">Address is invalid</string>
    <string name="internet">Enable internet for a moment</string>

    <string name="internet_connected">Connected to network.\nWait less than minute and click again :)\n(If address is correct)</string>



</resources>
