<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maciej.chcezdazyc.com.gmail.maciej.chcezdazyc.MainActivity"
    android:background="@drawable/bcg">

    <TextView
        android:id="@+id/tekst_gora"
        style="@style/wrap"
        android:text="@string/podaj_adres"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:hint="@string/adres"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tekst_gora"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/planowana_godzina"
        style="@style/wrap"
        android:text="@string/planowana_godzina"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorblack"
        android:layout_below="@id/autoComplete"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/godzina"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/planowana_godzina"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/kiedyDwaCztery"
        android:inputType="numberDecimal"
        android:minEms="5"
        android:maxLength="5" />

    <RadioGroup
        android:id="@+id/format_godzin"
        style="@style/wrap"
        android:layout_below="@id/godzina"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:checkedButton="@id/h24"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/h24"
            style="@style/wrap"
            android:text="@string/_24h"
            android:onClick="formatGodziny"/>
        <RadioButton
            android:id="@+id/am"
            style="@style/wrap"
            android:text="@string/am"
            android:onClick="formatGodziny"/>

        <RadioButton
            android:id="@+id/pm"
            style="@style/wrap"
            android:text="@string/pm"
            android:onClick="formatGodziny"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/unitLength"
        style="@style/wrap"
        android:layout_below="@id/format_godzin"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:checkedButton="@id/km"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/km"
            style="@style/wrap"
            android:text="@string/km"
            android:onClick="jednostkiDlugosci"/>

        <RadioButton
            android:id="@+id/yards"
            style="@style/wrap"
            android:text="@string/miles_ft"
            android:onClick="jednostkiDlugosci"
            />

    </RadioGroup>


    <Button
        style="@style/wrap"
        android:text="@string/jak_szybko_musze_isc"
        android:layout_marginTop="15dp"
        android:layout_below="@id/unitLength"
        android:layout_centerHorizontal="true"
        android:onClick="klik"
        tools:ignore="OnClick"
        android:id="@+id/button"
        android:background="@drawable/roundedbutton"/>








</RelativeLayout>
</ScrollView>